# smart_expense_tracker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/auth_service/: Dockerfile
backend/auth_service/app/: main.py
backend/auth_service/app/core/: security.py
backend/auth_service/app/database/: db.py
backend/auth_service/app/exceptions/: user_exceptions.py
backend/auth_service/app/models/: user.py
backend/auth_service/app/repositories/: user_repository.py
backend/auth_service/app/routes/: auth_routes.py  user_routes.py
backend/auth_service/app/schemas/: user_schemas.py
backend/auth_service/app/services/: user_service.py
backend/expense_service/: Dockerfile
backend/expense_service/app/: main.py
backend/expense_service/app/core/: security.py
backend/expense_service/app/database/: db.py
backend/expense_service/app/models/: expense.py
backend/expense_service/app/repositories/: expense_repository.py
backend/expense_service/app/routers/: expense_routes.py
backend/expense_service/app/schemas/: expense_schemas.py
backend/expense_service/tests/: test_expenses.py
frontend/: package-lock.json
frontend/src/: App.jsx
frontend/src/components/: ExpenseForm.jsx  ExpenseItem.jsx  ExpenseList.jsx  LoginForm.jsx
frontend/src/services/: api.js  auth.js  expenses.js
